samples/_failures_safe/1761309881_d180db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e421c44.c: In function ‘main’:
./samples/SAFE/__tmp_4e421c44.c:162:5: error: ‘k’ undeclared (first use in this function)
  162 |     k
      |     ^
./samples/SAFE/__tmp_4e421c44.c:162:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4e421c44.c:162:6: error: expected ‘;’ at end of input
  162 |     k
      |      ^
      |      ;
./samples/SAFE/__tmp_4e421c44.c:162:5: error: expected declaration or statement at end of input
  162 |     k
      |     ^
